changed filesystem; added sourcelist

--- a/templates/fstab.j2
+++ b/templates/fstab.j2
@@ -1,2 +1,2 @@
 UUID={{ boot_device_uuid }} /boot           ext4    defaults          0       0
-UUID={{ root_device_uuid }} /               ext4    errors=remount-ro 0       1
+UUID={{ root_device_uuid }} /               xfs     defaults          0       0
